# lsst_survey_sim

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: build_docs.yaml  cache.yaml  test_and_build.yaml
batch/: run_auxtel_prenight_sims.sh  run_prenight_sims.sh
docs/: Makefile  api.rst  documenteer.toml  index.rst
lsst_survey_sim/: __init__.py  lsst_support.py  plot.py  simulate_lsst.py
notebooks/: MorningAltAzLimits.ipynb  PlannedDowntime.ipynb  data_checks.ipynb  lsst_eval.ipynb  test_too.p
tests/: test_cli.py  test_lsst_support.py  test_simulate_lsst.py
