[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lsst_survey_sim"
description = "Tools to run simulations of the LSST survey"
readme = "README.md"
license = { text = "GPL" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
 ]
urls = {repository = "https://github.com/lsst-sims/lsst_survey_sim" }
dynamic = [ "version" ]
dependencies = [
    "astroplan",
    "astropy",
    "ts_fbs_utils@git+https://github.com/lsst-ts/ts_fbs_utils@v0.19.1",
    "healpy",
    "matplotlib",
    "numpy",
    "pandas",
    "rubin-nights >= 0.7.0",
    "rubin-scheduler == 3.20.0",
    "rubin-sim >= 2.6.0",
    "schedview >= 0.19.1"
]

[project.optional-dependencies]
test = [
     "pytest",
     "black >= 25",
     "ruff",
     "isort",
     "pytest-cov",
     "mypy",
]
dev = [
  "documenteer[guide]",
]

[project.scripts]
fetch_lsst_visits = "lsst_survey_sim.simulate_lsst:fetch_lsst_visits_cli"
make_lsst_scheduler = "lsst_survey_sim.simulate_lsst:make_lsst_scheduler_cli"
make_model_observatory = "lsst_survey_sim.simulate_lsst:make_model_observatory_cli"
make_band_scheduler = "lsst_survey_sim.simulate_lsst:make_band_scheduler_cli"
run_lsst_sim = "lsst_survey_sim.simulate_lsst:run_lsst_sim_cli"

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "" ]

[tool.pytest.ini_options]
addopts = "--ignore-glob=*/version.py --ignore-glob=*data_dir/*"

[tool.mypy]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.black]
line-length = 110
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
exclude = [
    "__init__.py", "notebooks",
]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "N816",
    "N999",
    "D107",
    "D105",
    "D102",
    "D104",
    "D100",
    "D200",
    "D205",
    "D400",
    "E712",
]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "N",  # pep8-naming
    "W",  # pycodestyle
]
extend-select = [
    "RUF100", # Warn about unused noqa
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"
